# rl-chatbot

./: .env.sample  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml
checkpoints/: .gitkeep  checkpoint_episode_5.json
data/: rl_chatbot.db  sample_test_cases.json
docs/: ADDING_NEW_AGENT_FRAMEWORK.md
examples/: multi_agent_example.py
migrations/: env.py
migrations/versions/: ebc48a9a0fbe_initial_schema.py
src/rl_chatbot/: __init__.py  factory.py
src/rl_chatbot/agents/: __init__.py  base.py
src/rl_chatbot/agents/langgraph/: __init__.py  agent.py
src/rl_chatbot/agents/openai/: __init__.py  agent.py
src/rl_chatbot/agents/pydantic_ai/: __init__.py  (+1 more)
src/rl_chatbot/chatbot/: __init__.py  agent.py  tools.py
src/rl_chatbot/evaluation/: __init__.py  evaluator.py  metrics.py
src/rl_chatbot/rl/: __init__.py  reward.py  trainer.py
src/rl_chatbot/server/: __init__.py  config.py  database.py  main.py
src/rl_chatbot/tools/: README.md  __init__.py  base.py  calculate.py  search.py  weather.py
tests/: __init__.py  test_tools.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/api/: agents.ts  chat.ts  client.ts  conversations.ts  evaluations.ts  health.ts  testCases.ts  tools.ts  training.ts
web/src/hooks/: useAgents.ts  useChat.ts  useConversations.ts  useEvaluations.ts  useTestCases.ts  useTraining.ts
web/src/pages/: Agents.tsx  Chat.module.css  Chat.tsx  Conversations.tsx  Dashboard.tsx  Evaluations.tsx  Page.module.css  TestCases.tsx  Training.tsx  index.ts
web/src/types/: api.ts
(+47 files in other folders)
