[project]
name = "rl-chatbot"
version = "0.1.0"
description = "Reinforcement learning for tool-calling chatbots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # RL libraries
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    # Optional: for more advanced RL
    # "ray[rllib]>=2.8.0",
    # Evaluation and logging
    "wandb>=0.15.0",  # Optional: for experiment tracking
    "tqdm>=4.65.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

